# VeriView

./: .gitignore  README.md  docker-compose.yml
agent-client/: agent.py  index.js  package.json
browser-service/: Dockerfile  package.json  start.js  test-attack.mjs  tsconfig.json
browser-service/src/: browser.ts  server.ts
core-gateway/: Cargo.toml  Dockerfile  package.json
core-gateway/src/: api.rs  main.rs  policy.rs
core-gateway/src/agent/: llm-service.ts  simple-agent.ts
frontend-vv/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend-vv/app/: globals.css  layout.tsx  page.tsx
frontend-vv/components/veriview/: agent-terminal.tsx  browser-viewport.tsx  header.tsx  interception-log.tsx  kill-switch.tsx
frontend-vv/lib/: veriview-store.ts
test-suite/: dashboard.html  target_alpha.html  trap.html
veriview-sdk/: README.md  package.json
veriview-sdk/src/: index.ts  types.ts
veriview_frontend/: README.md  package.json
veriview_frontend/app/: globals.css  layout.tsx  page.tsx
veriview_frontend/app/api/scan/: route.ts
veriview_frontend/components/: BentoGrid.module.css  BentoGrid.tsx  CodeSection.module.css  CodeSection.tsx  CtaSection.module.css  CtaSection.tsx  CursorGlow.tsx  Footer.module.css  Footer.tsx  Hero.module.css  Hero.tsx  HowItWorks.module.css  HowItWorks.tsx  Nav.module.css  Nav.tsx  Playground.module.css  Playground.tsx  Pricing.module.css  Pricing.tsx  SixLayers.module.css  SixLayers.tsx  Stats.module.css  Stats.tsx
vision-service/: Dockerfile  requirements.txt
vision-service/src/: main.py
