[package]
name = "core-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.11", features = ["json"] }

tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

scraper = "0.18"
